[gd_scene load_steps=19 format=3 uid="uid://bdpi4wrl8daod"]

[ext_resource type="Script" uid="uid://dhpvlw32c6iqc" path="res://scenes/game_object/enemies/basic_enemy/basic_enemy.gd" id="1_gxg7h"]
[ext_resource type="PackedScene" uid="uid://c8d1r2d4gad0n" path="res://scenes/component/health_component.tscn" id="2_isd1k"]
[ext_resource type="PackedScene" uid="uid://c66ggly8n7tlu" path="res://scenes/component/vial_drop_component.tscn" id="3_pcrk2"]
[ext_resource type="PackedScene" uid="uid://hw5nwxrd13jo" path="res://scenes/component/death_component.tscn" id="4_bq7hi"]
[ext_resource type="PackedScene" uid="uid://bvj8luodgb64u" path="res://scenes/component/hurtbox_component.tscn" id="4_elloc"]
[ext_resource type="PackedScene" uid="uid://cmjp036op6ubi" path="res://scenes/component/velocity_component.tscn" id="4_jkye5"]
[ext_resource type="Shader" uid="uid://m2j74wjmolvt" path="res://scenes/component/hit_flash_component.gdshader" id="6_yyp5f"]
[ext_resource type="PackedScene" uid="uid://cr0a8lop6s33n" path="res://scenes/component/hit_flash_component.tscn" id="8_v58qd"]
[ext_resource type="AudioStream" uid="uid://bwn81rsdbgxda" path="res://assets/audio/footstep_carpet_000.ogg" id="10_nrmcc"]
[ext_resource type="PackedScene" uid="uid://cnwkwdlt8fb8d" path="res://scenes/component/random_steam_player_2d_component.tscn" id="10_yyp5f"]
[ext_resource type="Texture2D" uid="uid://p0xtdigwav1a" path="res://scenes/game_object/enemies/basic_enemy/crow-fly.png" id="12_c8sqc"]
[ext_resource type="AudioStream" uid="uid://dc5k2hutswyu0" path="res://assets/audio/footstep_carpet_004.ogg" id="15_fcdwx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o8mo2"]
resource_local_to_scene = true
shader = ExtResource("6_yyp5f")
shader_parameter/lerp_percent = 0.0

[sub_resource type="Animation" id="Animation_qiub7"]
resource_name = "move"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_c8sqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r6t56"]
_data = {
&"RESET": SubResource("Animation_c8sqc"),
&"move": SubResource("Animation_qiub7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_elloc"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qrggj"]
radius = 5.0

[node name="BasicEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_gxg7h")

[node name="HealthComponent" parent="." instance=ExtResource("2_isd1k")]

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_pcrk2")]
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_jkye5")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("8_v58qd")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_o8mo2")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_bq7hi")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_r6t56")
}
autoplay = "move"

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("10_yyp5f")]
volume_db = -8.727
streams = Array[AudioStream]([ExtResource("10_nrmcc"), ExtResource("15_fcdwx")])

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_elloc")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_elloc")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -9)
scale = Vector2(0.75, 0.75)
texture = ExtResource("12_c8sqc")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_qrggj")
